object-fit ruta mod

--- a/11_formas-graficos/111_object-fit.html
+++ b/11_formas-graficos/111_object-fit.html
@@ -13,10 +13,10 @@
   <h1>Object-fit</h1>
 
   <div class="box">
-    <img class="sin-fit" src="./../assets/uni/g05.jpg" alt="">
+    <img class="sin-fit" src="./../assets/arq/3.jpg" alt="">
   </div>
 
   <div class="box">
-    <img class="con-fit" src="./../assets/uni/g05.jpg" alt=""></div>
+    <img class="con-fit" src="./../assets/arq/3.jpg" alt=""></div>
 </body>
 </html>
