--- a/11_formas-graficos/116_filter.html
+++ b/11_formas-graficos/116_filter.html
@@ -13,6 +13,7 @@
   <h1>Filter</h1>
 
   <img class="filter" src="./../assets/trans/6.png">
+  <img class="filter1" src="./../assets/trans/3.png">
 
 </body>
 </html>
