--- a/11_formas-graficos/116_filter.html
+++ b/11_formas-graficos/116_filter.html
@@ -12,8 +12,9 @@
 <body>
   <h1>Filter</h1>
 
-  <img class="filter" src="./../assets/trans/6.png">
-  <img class="filter1" src="./../assets/trans/3.png">
+  <img class="filter filter--hue" src="./../assets/trans/6.png">
+  <img class="filter filter--invert" src="./../assets/trans/3.png">
+  <img class="filter filter--sepia" src="./../assets/trans/x-adv_.png">
 
 </body>
 </html>
