--- a/12_layout/129_footer_down.html
+++ b/12_layout/129_footer_down.html
@@ -9,8 +9,41 @@
   <link rel="stylesheet" href="./../css/base.css">
   <link rel="stylesheet" href="129_footer_down.css">
 </head>
-<body class="mk-k">
+<body>
   <h1>footer down</h1>
-  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore aut porro ullam praesentium veritatis! Soluta, delectus officia eaque cumque in porro. Beatae ipsa cumque eius, maxime esse debitis impedit nostrum?</p>
+  <section>
+    <h2>Artículo 01</h2>
+    <article>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum porro qui quod quos architecto dicta, expedita, esse, explicabo omnis possimus accusamus quia harum! Suscipit sed nobis ullam! Sequi quis numquam id culpa distinctio perspiciatis nemo qui, dolores deleniti libero mollitia dolor, eos perferendis excepturi similique rem cumque adipisci, placeat eum cum nobis tempore a! Repudiandae officiis soluta ipsam rerum incidunt eius magni nam velit laborum ipsum debitis labore harum dicta, tenetur voluptate esse voluptatem in at sequi eligendi enim similique iusto architecto quae! Asperiores ab fugiat autem ut delectus placeat eius repellat cum adipisci porro nihil debitis, facilis expedita consequatur?</article>
+  </section>
+  <section>
+    <h2>Artículo 02</h2>
+    <article>Non delectus placeat corrupti dolores quae, accusamus deleniti maiores iste earum quas recusandae vero distinctio, voluptatem dignissimos qui facilis, quisquam sapiente odio? Rem ipsa placeat non nisi laudantium iure qui saepe suscipit? Ratione, architecto molestiae! Quas, voluptate asperiores? Repudiandae minima iure sequi similique ipsum deleniti, ad laborum explicabo reprehenderit unde vero ea architecto. Molestias obcaecati omnis laudantium alias velit quas ea? Ullam accusantium mollitia quis dicta, quod quisquam ab laboriosam dolorem. Quos modi dicta minima adipisci facilis commodi optio maiores eaque architecto itaque doloremque corrupti veniam, fuga, reiciendis numquam. Labore molestiae adipisci ipsa minus alias natus architecto ullam, voluptatibus at.</article>
+  </section>
+  <section>
+    <h2>Artículo 03</h2>
+    <article>Officia numquam suscipit rerum praesentium saepe nemo exercitationem ad nesciunt iste modi, iusto sed cum ab quidem vel accusamus quo eius minima sint, laboriosam repellat ipsa eligendi expedita quis. Nemo, distinctio accusamus? Corrupti natus minima cumque laudantium, accusamus numquam! Ad quasi repellat, similique officia id, sed vitae modi debitis nesciunt iste nostrum asperiores impedit voluptas suscipit facere veniam rerum et. Numquam et quidem praesentium quas inventore quaerat laborum voluptas minima ea quis consectetur sint assumenda neque rem, voluptate dolorum! Similique assumenda, nesciunt ea pariatur quod soluta eligendi inventore possimus earum placeat, quisquam provident commodi nobis? Nesciunt non atque quos vel.</article>
+  </section>
+  <section>
+    <h2>Artículo 04</h2>
+    <article>Beatae incidunt nulla vitae magnam voluptate dolore debitis excepturi, consequatur adipisci aliquid, ducimus nihil voluptatibus, ullam eaque molestiae minus temporibus! Harum voluptates animi aut corporis quibusdam neque facilis autem velit ratione totam non recusandae vitae minus eum, ducimus excepturi ab deserunt amet est inventore ex esse odit temporibus vel. Perspiciatis, in. Assumenda, modi quidem ipsa animi corporis, at aut obcaecati possimus eius accusantium in ea magni cumque earum excepturi hic dolor necessitatibus placeat quod totam architecto? Sint quidem enim deleniti! Modi, ducimus inventore. Vitae, veritatis nobis eligendi in eveniet magnam esse odit totam laboriosam dolorum doloribus enim rerum! Culpa, consequatur.</article>
+  </section>
+  <section>
+    <h2>Artículo 05</h2>
+    <article>Vero ipsa distinctio in praesentium nihil, rerum non optio modi, tenetur dolor quidem ratione numquam, aut quae dolorem aperiam quaerat perferendis possimus consequatur aliquam fugit sed aspernatur harum. Nisi sit eligendi ducimus possimus numquam repellat placeat soluta iste rem, expedita nihil illum nesciunt beatae nobis nostrum fuga officiis in molestias saepe fugiat. Voluptas vel qui aperiam laudantium, ea quis quas reprehenderit reiciendis, doloremque recusandae impedit nostrum? Temporibus voluptatem voluptates porro tenetur beatae officia eius, ullam dicta rem soluta. Quisquam, sit? Fuga veritatis, magni consectetur velit at praesentium, asperiores nulla, molestiae reiciendis autem repudiandae. Provident expedita veritatis voluptatem odit, mollitia quo!</article>
+  </section>
+  <section>
+    <h2>Artículo 06</h2>
+    <article>Tempora dolore quam laboriosam ratione molestias repudiandae aut reprehenderit id possimus pariatur ullam asperiores, eligendi dolor saepe iure eos animi repellendus quo, nisi minus accusamus tenetur ab. Nostrum fuga mollitia quia nulla nesciunt voluptatum reiciendis corporis porro. Ipsum veritatis enim nostrum impedit, hic odio dolore culpa! Similique, sit doloremque in vitae consectetur dolor ipsa deserunt autem magnam, voluptates pariatur dolorem velit magni! Fugiat similique tempora, delectus vitae culpa id doloremque inventore explicabo atque quisquam cum vero odio obcaecati repellat, minus harum cupiditate nesciunt. Impedit minus quibusdam voluptate placeat quam dolorum amet. Dolorum earum tempore explicabo adipisci modi nam quos aut?</article>
+  </section>
+  <section>
+    <h2>Artículo 07</h2>
+    <article>Cum repudiandae cumque temporibus sequi dignissimos nobis sunt neque, quam incidunt quisquam autem at delectus pariatur voluptatem eaque, officiis error debitis dolores deserunt quasi eligendi tenetur aut iusto dolorum. Vero molestias iusto ut ratione sit distinctio! Beatae magnam tempora corporis. Dolorum repellat, veritatis neque eaque facere nobis atque obcaecati deserunt quos quasi, cupiditate laborum! Dolore facere quos aliquid non? Qui ipsum minus tempore molestias voluptatibus maiores optio id mollitia magni et at error deserunt similique a ex enim, vitae nihil earum necessitatibus nesciunt quam, quisquam illum? Asperiores minima unde impedit corrupti magni, molestiae dolore consectetur, quas laudantium, sequi excepturi beatae!</article>
+  </section>
+  <section>
+    <h2>Artículo 08</h2>
+    <article>Iure, vero ipsam consequatur porro cumque expedita est, alias dolorem quasi excepturi deserunt error suscipit sint ducimus assumenda accusantium sunt! Maiores labore velit dolore praesentium amet, fugiat aliquid explicabo ad. Corporis eius officia sit adipisci earum esse dicta impedit eaque nobis omnis cum repellat consectetur blanditiis incidunt debitis perferendis voluptate, in officiis, similique at error quasi saepe. Fuga earum, sint commodi voluptatem eveniet voluptas aspernatur aperiam libero debitis sequi aut ea corrupti explicabo harum rerum ratione doloribus suscipit, recusandae enim hic atque! Ipsam, illo! Cupiditate ex amet maiores. Ut reiciendis nobis expedita iure repudiandae accusamus in dolore eligendi. Molestiae, ad!</article>
+  </section>
+
+  <footer>Lorem ipsum dolor sit amet.</footer>
 </body>
 </html>
