mod accent-color

--- a/10_formularios/101_accent-color.html
+++ b/10_formularios/101_accent-color.html
@@ -16,5 +16,11 @@
   <input type="radio" name="r1" checked />
   <input type="radio"name="r1" />
 
+	<select class="opciones">
+		<option>Opción 1</option>
+		<option>Opción 2</option>
+		<option>Opción 3</option>
+	</select>
+
 </body>
 </html>
