--- a/07_listas/073_marker.html
+++ b/07_listas/073_marker.html
@@ -32,5 +32,13 @@
   <h3>subtítulo 03</h3>
   <h3>subtítulo 04</h3>
 
+  <ul class="lista">
+    <li>ítem 01</li>
+    <li>ítem 02</li>
+    <li>ítem 03</li>
+  </ul>
+
+
+
 </body>
 </html>
